@@ -1,3 +1,8 @@
+2006-09-22  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/fe-gnome/userlist-gui.c: (get_user_tooltip):
+	  - Fix a crash when using type-ahead search.  Bug #356091.
+
 2006-09-20  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/fe-gnome/xtext.c: (primary_clear_cb):
